--- a/Bootstrap/contact.html
+++ b/Bootstrap/contact.html
@@ -86,7 +86,36 @@
 
                 </div>
             </div>
-            <div class="col-7"></div>
+            <div class="col-7">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-12">
+                            <form>
+                                <div class="form-group">
+                                    <label for="name">
+                                        <input type="text" class="form-control" id="name" placeholder="name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email:</label>
+                                    <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                                </div>
+                                <div class="form-group">
+                                    <label for="subject">Subject:</label>
+                                    <input type="text" class="form-control" id="subject"
+                                        placeholder="Enter the subject">
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">Message:</label>
+                                    <textarea class="form-control" id="message" rows="5"
+                                        placeholder="Enter your message"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Send Message</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
     <div class="container-fluid footer-main ">
