--- a/Bootstrap/contact.html
+++ b/Bootstrap/contact.html
@@ -88,31 +88,31 @@
             </div>
             <div class="col-7">
                 <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-12">
-                            <form>
-                                <div class="form-group">
-                                    <label for="name">
-                                        <input type="text" class="form-control" id="name" placeholder="name">
-                                </div>
-                                <div class="form-group">
-                                    <label for="email">Email:</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Enter your email">
-                                </div>
-                                <div class="form-group">
-                                    <label for="subject">Subject:</label>
-                                    <input type="text" class="form-control" id="subject"
-                                        placeholder="Enter the subject">
-                                </div>
-                                <div class="form-group">
-                                    <label for="message">Message:</label>
-                                    <textarea class="form-control" id="message" rows="5"
-                                        placeholder="Enter your message"></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-primary">Send Message</button>
-                            </form>
+                    <form action="">
+                        <div class="row justify-content-center pb-4">
+                            <div class="col-6">
+                                <input type="text" placeholder="Your Name" class="form-control">
+                            </div>
+                            <div class="col-6">
+                                <input type="email" placeholder="Your Email" class="form-control">
+                            </div>
                         </div>
-                    </div>
+                        <div class="row justify-content-center pb-4">
+                            <div class="col">
+                                <input type="text" placeholder="Your Subject" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row justify-content-center pb-4">
+                            <div class="col">
+                                <textarea cols="30" rows="8" placeholder="Your Message" class="form-control"></textarea>
+                            </div>
+                        </div>
+                        <div class="row pb-4">
+                            <div class="col">
+                                <button type="submit">SEND MESSAGE</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
 
             </div>
