--- a/Bootstrap02/menu/home.html
+++ b/Bootstrap02/menu/home.html
@@ -243,39 +243,90 @@
         </div>
 
     </div>
-    <div class="container community rounded-20px">
-        <div class="row community-block">
-            <div class="col-6">
-                <h1 class="font-weight-bold pb-4">Get help from Landpagy Community</h1>
-                <p class="text-secondary ">Connect with Landpagy users of all levels to learn, support & inspire one
-                    another</p>
-            </div>
-            <div class="col-6 pl-5">
-                <div class="container community-static">
-                    <a class="bg-white p-3 d-flex align-items-center" href="">
-                        <i class="fa-brands fa-facebook-f text-center text-important mr-3"></i>
-                        <p class="align-items-center text-body m-0">Join 50k+ Landpagy Users on Facebook</p>
-                    </a>
-                </div>
-                <div class="container community-static  mt-5">
-                    <a class="bg-white p-3 d-flex justify-content-center" href="">
-                        <i class="fab fa-meetup text-center mr-3 text-danger border-danger"></i>
-                        <p class="align-items-center text-body m-0">Meet & Collaborate With Local Landpagy Usersk</p>
-                    </a>
-                </div>
+    <div class="container">
+        <div class="row block-3 pb-5">
+            <div class="container community rounded-20px">
+                <div class="row community-block">
+                    <div class="col-6">
+                        <h1 class="font-weight-bold pb-4">Get help from Landpagy Community</h1>
+                        <p class="text-secondary ">Connect with Landpagy users of all levels to learn, support & inspire
+                            one
+                            another</p>
+                    </div>
+                    <div class="col-6 pl-5">
+                        <div class="container community-static">
+                            <a class="bg-white p-3 d-flex align-items-center" href="">
+                                <i class="fa-brands fa-facebook-f text-center text-important mr-3"></i>
+                                <p class="align-items-center text-body m-0">Join 50k+ Landpagy Users on Facebook</p>
+                            </a>
+                        </div>
+                        <div class="container community-static  mt-5">
+                            <a class="bg-white p-3 d-flex justify-content-center" href="">
+                                <i class="fab fa-meetup text-center mr-3 text-danger border-danger"></i>
+                                <p class="align-items-center text-body m-0">Meet & Collaborate With Local Landpagy
+                                    Usersk
+                                </p>
+                            </a>
+                        </div>
 
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="container text-center pb-5">
-        <div>
-            <h1 class="font-weight-bolder">Frequently asked questions</h1>
-            <p class="text-secondary w-50 text-center ml-auto mr-auto">Aenean amet netus aliquam elit eu, sagittis id
-                natoque
-                id. Purus
-                augue
-                fermentum
-                dui aliquam dui vel.</p>
+            <div class="container">
+                <div class="row question-block">
+                    <div class="col-12 text-center pb-5">
+                        <h1 class="font-weight-bolder">Frequently asked questions</h1>
+                        <p class="text-secondary w-50 text-center ml-auto mr-auto">Aenean amet netus aliquam elit eu,
+                            sagittis
+                            id
+                            natoque
+                            id. Purus
+                            augue
+                            fermentum
+                            dui aliquam dui vel.</p>
+                    </div>
+                    <div class="col-12 frequent-question">
+                        <div class="frequent-question-item mb-3">
+                            <a href="" class="d-flex justify-content-space-between w-75 ml-auto mr-auto p-4">
+                                <h4 class=" text-body m-0">Q1. How can i use Landpagy?
+                                </h4>
+                                <i class="fa-solid fa-plus text-secondary fa-lg"></i>
+                            </a>
+                        </div>
+
+                        <div class="frequent-question-item mb-3">
+                            <a href="" class="d-flex justify-content-space-between w-75 ml-auto mr-auto p-4">
+                                <h4 class=" text-body m-0">Q2. When should I use a Tag?
+
+                                </h4>
+                                <i class="fa-solid fa-plus text-secondary fa-lg"></i>
+                            </a>
+                        </div>
+                        <div class="frequent-question-item mb-3">
+                            <a href="" class="d-flex justify-content-space-between w-75 ml-auto mr-auto p-4">
+                                <h4 class=" text-body m-0">Q3. How can I make all this less work?
+                                    ?
+                                </h4>
+                                <i class="fa-solid fa-plus text-secondary fa-lg"></i>
+                            </a>
+                        </div>
+                        <div class="frequent-question-item mb-3">
+                            <a href="" class="d-flex justify-content-space-between w-75 ml-auto mr-auto p-4">
+                                <h4 class=" text-body m-0">Q4. How can i use Landpagy?
+                                </h4>
+                                <i class="fa-solid fa-plus text-secondary fa-lg"></i>
+                            </a>
+                        </div>
+                        <div class="frequent-question-item mb-3">
+                            <a href="" class="d-flex justify-content-space-between w-75 ml-auto mr-auto p-4">
+                                <h4 class=" text-body m-0">Q5. What's up, Docs?
+                                </h4>
+                                <i class="fa-solid fa-plus text-secondary fa-lg"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container-fluid support-ticket">
