--- a/Bootstrap03/menu/home.html
+++ b/Bootstrap03/menu/home.html
@@ -18,11 +18,18 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Link font -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
+
+    <!-- Link CDN  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- Css   -->
     <link rel="stylesheet" href="/css/home.css">
 </head>
 
 <body>
-    <div class="container-fluid header fixed-top bg-white">
+    <div class="container-fluid header bg-white">
         <div class=" px-5">
             <nav class="navbar navbar-expand-md navbar-white py-4">
                 <a class="navbar-brand text-secondary" href="#">
@@ -49,9 +56,117 @@
         </div>
     </div>
 
-    <div class="container-fluid body-content"></div>
+    <div class="container-fluid main-bg-1">
+        <div class="row py-5">
+            <div class="col my-5">
+                <div class="row">
+                    <div class="col text-center">
+                        <h4 class="text-white">Who Am I?</h4>
+                    </div>
+                </div>
+                <div class="row my-5">
+                    <div class="col text-center">
+                        <img class="img-responsive img-circle" src="/image/bird.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col text-center">
+                        <h4 class="text-white">I'm an adventurer</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid main-bg-2">
+        <div class="row py-5">
+            <div class="col my-5">
+                <div class="row">
+                    <div class="col text-center">
+                        <h4 class="text-white">What Am I?</h4>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col text-center">
+                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</ơ>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col text-center">
+                        <button type="button" class="btn btn-light btn-lg">
+                            <i class="fa-solid fa-magnifying-glass"></i> Search</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bg-white">
+        <div class="row py-5">
+            <div class="col my-5">
+                <div class="row mb-5">
+                    <div class="col text-center">
+                        <h4 class="text-secondary">Where To Find Me?
+                        </h4>
 
-    <div class="container footer"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4 text-center">
+                        <div class="row">
+                            <div class="col">
+                                <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                                    do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                        <div class="row ">
+                            <div class="col">
+                                <img class="img-responsive margin w-100" src="/image/birds1.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 text-center">
+                        <div class="row">
+                            <div class="col">
+                                <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                                    do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                        <div class="row ">
+                            <div class="col">
+                                <img class="img-responsive margin w-100" src="/image/birds2.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 text-center">
+                        <div class="row">
+                            <div class="col">
+                                <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                                    do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                        <div class="row ">
+                            <div class="col">
+                                <img class="img-responsive margin w-100" src="/image/birds3.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid footer bg-dark py-5">
+        <div class="row py-4">
+            <div class="col text-white text-center">
+                Bootstrap Theme Made By
+                <a class="text-info" href="www.w3schools.com">www.w3schools.com</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
