--- a/Bootstrap03/menu/home.html
+++ b/Bootstrap03/menu/home.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="row my-5">
                     <div class="col text-center">
-                        <img class="img-responsive img-circle" src="/image/bird.jpg" alt="">
+                        <img class="img-responsive img-circle" src="/image/bird/bird.jpg" alt="">
                     </div>
                 </div>
                 <div class="row">
@@ -122,7 +122,7 @@
                         </div>
                         <div class="row ">
                             <div class="col">
-                                <img class="img-responsive margin w-100" src="/image/birds1.jpg" alt="">
+                                <img class="img-responsive margin w-100" src="/image/bird/birds1.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                         </div>
                         <div class="row ">
                             <div class="col">
-                                <img class="img-responsive margin w-100" src="/image/birds2.jpg" alt="">
+                                <img class="img-responsive margin w-100" src="/image/bird/birds2.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                         </div>
                         <div class="row ">
                             <div class="col">
-                                <img class="img-responsive margin w-100" src="/image/birds3.jpg" alt="">
+                                <img class="img-responsive margin w-100" src="/image/bird/birds3.jpg" alt="">
                             </div>
                         </div>
                     </div>
